--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -188,11 +188,12 @@
                     <li><a href="../files/src-response-checkpointresponse.html"><abbr title="src/Response/CheckpointResponse.php">CheckpointResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-children.html"><abbr title="src/Response/Model/Bloks/Children.php">Children.php</abbr></a></li>
                     <li><a href="../files/src-client.html"><abbr title="src/Client.php">Client.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-clip.html"><abbr title="src/Response/Model/Clip.php">Clip.php</abbr></a></li>
                     <li><a href="../files/src-response-model-closefriends.html"><abbr title="src/Response/Model/CloseFriends.php">CloseFriends.php</abbr></a></li>
                     <li><a href="../files/src-response-closefriendsresponse.html"><abbr title="src/Response/CloseFriendsResponse.php">CloseFriendsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-cluster.html"><abbr title="src/Response/Model/Cluster.php">Cluster.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-collectionfeedresponse.html"><abbr title="src/Response/CollectionFeedResponse.php">CollectionFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-commandinterface.html"><abbr title="src/Realtime/CommandInterface.php">CommandInterface.php</abbr></a></li>
@@ -228,8 +229,8 @@
                     <li><a href="../files/src-response-createcollectionresponse.html"><abbr title="src/Response/CreateCollectionResponse.php">CreateCollectionResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createhighlightresponse.html"><abbr title="src/Response/CreateHighlightResponse.php">CreateHighlightResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createliveresponse.html"><abbr title="src/Response/CreateLiveResponse.php">CreateLiveResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
                     <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
                 </ul>
                                     <h3>D</h3>
         <ul class="phpdocumentor-list">
@@ -367,8 +368,8 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-handler-handlerexception.html"><abbr title="src/Realtime/Handler/HandlerException.php">HandlerException.php</abbr></a></li>
                     <li><a href="../files/src-realtime-handlerinterface.html"><abbr title="src/Realtime/HandlerInterface.php">HandlerInterface.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtagfollow.html"><abbr title="src/Response/Model/HashtagFollow.php">HashtagFollow.php</abbr></a></li>
                     <li><a href="../files/src-response-hashtagsresponse.html"><abbr title="src/Response/HashtagsResponse.php">HashtagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-headline.html"><abbr title="src/Response/Model/Headline.php">Headline.php</abbr></a></li>
@@ -434,8 +435,8 @@
                     <li><a href="../files/src-realtime-subscription-skywalker-livesubscription.html"><abbr title="src/Realtime/Subscription/Skywalker/LiveSubscription.php">LiveSubscription.php</abbr></a></li>
                     <li><a href="../files/src-response-model-livevideoshare.html"><abbr title="src/Response/Model/LiveVideoShare.php">LiveVideoShare.php</abbr></a></li>
                     <li><a href="../files/src-response-model-liveviewerinvite.html"><abbr title="src/Response/Model/LiveViewerInvite.php">LiveViewerInvite.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-location.html"><abbr title="src/Response/Model/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-request-location.html"><abbr title="src/Request/Location.php">Location.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-location.html"><abbr title="src/Response/Model/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-response-locationfeedresponse.html"><abbr title="src/Response/LocationFeedResponse.php">LocationFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-locationinforesponse.html"><abbr title="src/Response/LocationInfoResponse.php">LocationInfoResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-locationitem.html"><abbr title="src/Response/Model/LocationItem.php">LocationItem.php</abbr></a></li>
@@ -648,8 +649,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
