--- a/documentation/namespaces/instagramapi-response-model.html
+++ b/documentation/namespaces/instagramapi-response-model.html
@@ -600,6 +600,8 @@
                 <dd>LoginResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-Model-SessionInfo.html"><abbr title="\InstagramAPI\Response\Model\SessionInfo">SessionInfo</abbr></a></dt>
                 <dd>SessionInfo.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-Clip.html"><abbr title="\InstagramAPI\Response\Model\Clip">Clip</abbr></a></dt>
+                <dd>Clip.</dd>
             
                     </dl>
     
