--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1454,6 +1454,8 @@ because of too many requests. You must slow yourself down!</dd>
                 <dd>SendVerifyEmailResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-IeForceSetNewPasswordFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\IeForceSetNewPasswordFormException">IeForceSetNewPasswordFormException</abbr></a></dt>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-Clip.html"><abbr title="\InstagramAPI\Response\Model\Clip">Clip</abbr></a></dt>
+                <dd>Clip.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
