--- a/documentation/classes/InstagramAPI-Utils.html
+++ b/documentation/classes/InstagramAPI-Utils.html
@@ -857,11 +857,11 @@ for you to set this value to another, writable path, like this:</p>
                     <span class="phpdocumentor-signature__argument">
             [,                 <span class="phpdocumentor-signature__argument__name">$publicKey</span> :
                 <span class="phpdocumentor-signature__argument__return-type">string</span>
-                 = <span class="phpdocumentor-signature__argument__default-value">&#039;4fd28ee2f38b02707cf2478111e82ed6c3d9fb4e181768d4bc15b6aae1474a45&#039;</span> ]            </span>
+                 = <span class="phpdocumentor-signature__argument__default-value">&#039;8dd9aad29d9a614c338cff479f850d3ec57c525c33b3f702ab65e9e057fc087e&#039;</span> ]            </span>
                     <span class="phpdocumentor-signature__argument">
             [,                 <span class="phpdocumentor-signature__argument__name">$publicKeyId</span> :
                 <span class="phpdocumentor-signature__argument__return-type">string</span>
-                 = <span class="phpdocumentor-signature__argument__default-value">155</span> ]            </span>
+                 = <span class="phpdocumentor-signature__argument__default-value">87</span> ]            </span>
                 )
         : <span class="phpdocumentor-signature__response_type">string</span>
     </code>
@@ -881,12 +881,12 @@ CRYPTOGRAPHY.</p></section>
                             <dt class="phpdocumentor-argument-list__entry">
                     <span class="phpdocumentor-signature__argument__name">$publicKey</span>
                     : <span class="phpdocumentor-signature__argument__return-type">string</span>
-                     = <span class="phpdocumentor-signature__argument__default-value">&#039;4fd28ee2f38b02707cf2478111e82ed6c3d9fb4e181768d4bc15b6aae1474a45&#039;</span>                </dt>
+                     = <span class="phpdocumentor-signature__argument__default-value">&#039;8dd9aad29d9a614c338cff479f850d3ec57c525c33b3f702ab65e9e057fc087e&#039;</span>                </dt>
                 <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Public Key.</p></section></dd>
                             <dt class="phpdocumentor-argument-list__entry">
                     <span class="phpdocumentor-signature__argument__name">$publicKeyId</span>
                     : <span class="phpdocumentor-signature__argument__return-type">string</span>
-                     = <span class="phpdocumentor-signature__argument__default-value">155</span>                </dt>
+                     = <span class="phpdocumentor-signature__argument__default-value">87</span>                </dt>
                 <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Public Key ID.</p></section></dd>
                     </dl>
     
@@ -2626,7 +2626,7 @@ too many now to catch them all and new ones appear constantly).</p></section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Utils.php"><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">1708</span>
+        <span class="phpdocumentor-element-found-in__line">1709</span>
     </aside>
         <p class="phpdocumentor-summary">Extract all URLs from a text string.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -2636,6 +2636,10 @@ too many now to catch them all and new ones appear constantly).</p></section>
                             <span class="phpdocumentor-signature__argument__name">$text</span> :
                 <span class="phpdocumentor-signature__argument__return-type">string</span>
                             </span>
+                    <span class="phpdocumentor-signature__argument">
+            [,                 <span class="phpdocumentor-signature__argument__name">$excludeText</span> :
+                <span class="phpdocumentor-signature__argument__return-type">string|string[]</span>
+                 = <span class="phpdocumentor-signature__argument__default-value">[]</span> ]            </span>
                 )
         : <span class="phpdocumentor-signature__response_type">array</span>
     </code>
@@ -2648,6 +2652,11 @@ too many now to catch them all and new ones appear constantly).</p></section>
                     <span class="phpdocumentor-signature__argument__name">$text</span>
                     : <span class="phpdocumentor-signature__argument__return-type">string</span>
                                     </dt>
+                <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>The string to scan for URLs.</p></section></dd>
+                            <dt class="phpdocumentor-argument-list__entry">
+                    <span class="phpdocumentor-signature__argument__name">$excludeText</span>
+                    : <span class="phpdocumentor-signature__argument__return-type">string|string[]</span>
+                     = <span class="phpdocumentor-signature__argument__default-value">[]</span>                </dt>
                 <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>The string to scan for URLs.</p></section></dd>
                     </dl>
     
@@ -2669,7 +2678,7 @@ too many now to catch them all and new ones appear constantly).</p></section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Utils.php"><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">1747</span>
+        <span class="phpdocumentor-element-found-in__line">1761</span>
     </aside>
         <p class="phpdocumentor-summary">Get country code from given locale.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
