--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -192,8 +192,8 @@
                     <li><a href="../files/src-response-model-closefriends.html"><abbr title="src/Response/Model/CloseFriends.php">CloseFriends.php</abbr></a></li>
                     <li><a href="../files/src-response-closefriendsresponse.html"><abbr title="src/Response/CloseFriendsResponse.php">CloseFriendsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-cluster.html"><abbr title="src/Response/Model/Cluster.php">Cluster.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-collectionfeedresponse.html"><abbr title="src/Response/CollectionFeedResponse.php">CollectionFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-commandinterface.html"><abbr title="src/Realtime/CommandInterface.php">CommandInterface.php</abbr></a></li>
@@ -229,8 +229,8 @@
                     <li><a href="../files/src-response-createcollectionresponse.html"><abbr title="src/Response/CreateCollectionResponse.php">CreateCollectionResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createhighlightresponse.html"><abbr title="src/Response/CreateHighlightResponse.php">CreateHighlightResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createliveresponse.html"><abbr title="src/Response/CreateLiveResponse.php">CreateLiveResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                     <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
+                    <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                 </ul>
                                     <h3>D</h3>
         <ul class="phpdocumentor-list">
@@ -384,8 +384,8 @@
                     <li><a href="../files/src-response-model-ioslinks.html"><abbr title="src/Response/Model/IOSLinks.php">IOSLinks.php</abbr></a></li>
                     <li><a href="../files/src-response-model-iabautofilloptoutinfo.html"><abbr title="src/Response/Model/IabAutofillOptoutInfo.php">IabAutofillOptoutInfo.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-ieforcesetnewpasswordformexception.html"><abbr title="src/Exception/Checkpoint/IeForceSetNewPasswordFormException.php">IeForceSetNewPasswordFormException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-imagecandidate.html"><abbr title="src/Response/Model/ImageCandidate.php">ImageCandidate.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image-versions2.html"><abbr title="src/Response/Model/Image_Versions2.php">Image_Versions2.php</abbr></a></li>
                     <li><a href="../files/src-response-model-in.html"><abbr title="src/Response/Model/In.php">In.php</abbr></a></li>
@@ -402,8 +402,8 @@
                     <li><a href="../files/src-media-photo-instagramphoto.html"><abbr title="src/Media/Photo/InstagramPhoto.php">InstagramPhoto.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramthumbnail.html"><abbr title="src/Media/Video/InstagramThumbnail.php">InstagramThumbnail.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramvideo.html"><abbr title="src/Media/Video/InstagramVideo.php">InstagramVideo.php</abbr></a></li>
-                    <li><a href="../files/src-request-internal.html"><abbr title="src/Request/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
+                    <li><a href="../files/src-request-internal.html"><abbr title="src/Request/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-exception-internalexception.html"><abbr title="src/Exception/InternalException.php">InternalException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invalidsmscodeexception.html"><abbr title="src/Exception/InvalidSmsCodeException.php">InvalidSmsCodeException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invaliduserexception.html"><abbr title="src/Exception/InvalidUserException.php">InvalidUserException.php</abbr></a></li>
@@ -445,8 +445,8 @@
                     <li><a href="../files/src-response-model-loggedinaccount.html"><abbr title="src/Response/Model/LoggedInAccount.php">LoggedInAccount.php</abbr></a></li>
                     <li><a href="../files/src-response-loginactivityresponse.html"><abbr title="src/Response/LoginActivityResponse.php">LoginActivityResponse.php</abbr></a></li>
                     <li><a href="../files/src-exception-loginrequiredexception.html"><abbr title="src/Exception/LoginRequiredException.php">LoginRequiredException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-loginresponse.html"><abbr title="src/Response/Model/LoginResponse.php">LoginResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-loginresponse.html"><abbr title="src/Response/LoginResponse.php">LoginResponse.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-loginresponse.html"><abbr title="src/Response/Model/LoginResponse.php">LoginResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-logoutresponse.html"><abbr title="src/Response/LogoutResponse.php">LogoutResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-lookupphoneresponse.html"><abbr title="src/Response/LookupPhoneResponse.php">LookupPhoneResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-loomfetchconfigresponse.html"><abbr title="src/Response/LoomFetchConfigResponse.php">LoomFetchConfigResponse.php</abbr></a></li>
@@ -476,6 +476,7 @@
                     <li><a href="../files/src-settings-storage-memcached.html"><abbr title="src/Settings/Storage/Memcached.php">Memcached.php</abbr></a></li>
                     <li><a href="../files/src-realtime-message.html"><abbr title="src/Realtime/Message.php">Message.php</abbr></a></li>
                     <li><a href="../files/src-response-model-metadata.html"><abbr title="src/Response/Model/Metadata.php">Metadata.php</abbr></a></li>
+                    <li><a href="../files/src-response-monetizationproductseligibilitydataresponse.html"><abbr title="src/Response/MonetizationProductsEligibilityDataResponse.php">MonetizationProductsEligibilityDataResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-mqtt.html"><abbr title="src/Realtime/Mqtt.php">Mqtt.php</abbr></a></li>
                     <li><a href="../files/src-response-msisdnheaderresponse.html"><abbr title="src/Response/MsisdnHeaderResponse.php">MsisdnHeaderResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-multiaccountsresponse.html"><abbr title="src/Response/MultiAccountsResponse.php">MultiAccountsResponse.php</abbr></a></li>
@@ -649,8 +650,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
@@ -668,8 +669,8 @@
                     <li><a href="../files/src-settings-storageinterface.html"><abbr title="src/Settings/StorageInterface.php">StorageInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-stories.html"><abbr title="src/Response/Model/Stories.php">Stories.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storiesnetego.html"><abbr title="src/Response/Model/StoriesNetego.php">StoriesNetego.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-storyanswersresponse.html"><abbr title="src/Response/StoryAnswersResponse.php">StoryAnswersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storyappattribution.html"><abbr title="src/Response/Model/StoryAppAttribution.php">StoryAppAttribution.php</abbr></a></li>
                     <li><a href="../files/src-response-storycharitiesresponse.html"><abbr title="src/Response/StoryCharitiesResponse.php">StoryCharitiesResponse.php</abbr></a></li>
@@ -733,8 +734,8 @@
                     <li><a href="../files/src-response-tagsstoryresponse.html"><abbr title="src/Response/TagsStoryResponse.php">TagsStoryResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-tallies.html"><abbr title="src/Response/Model/Tallies.php">Tallies.php</abbr></a></li>
                     <li><a href="../files/src-response-model-template.html"><abbr title="src/Response/Model/Template.php">Template.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-text.html"><abbr title="src/Response/Model/Bloks/Text.php">Text.php</abbr></a></li>
                     <li><a href="../files/src-response-model-text.html"><abbr title="src/Response/Model/Text.php">Text.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-text.html"><abbr title="src/Response/Model/Bloks/Text.php">Text.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-textthemedcolor.html"><abbr title="src/Response/Model/Bloks/TextThemedColor.php">TextThemedColor.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-themedcolor.html"><abbr title="src/Response/Model/Bloks/ThemedColor.php">ThemedColor.php</abbr></a></li>
                     <li><a href="../files/src-response-model-thread.html"><abbr title="src/Response/Model/Thread.php">Thread.php</abbr></a></li>
@@ -785,8 +786,8 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-userunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/UserUnpredictableContainer.php">UserUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-usernamesuggestionsresponse.html"><abbr title="src/Response/UsernameSuggestionsResponse.php">UsernameSuggestionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-userslookupresponse.html"><abbr title="src/Response/UsersLookupResponse.php">UsersLookupResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-usertagsresponse.html"><abbr title="src/Response/UsertagsResponse.php">UsertagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></li>
                 </ul>
