--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -527,6 +527,8 @@
                 <dd>CheckConfirmationCodeResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-SendVerifyEmailResponse.html"><abbr title="\InstagramAPI\Response\SendVerifyEmailResponse">SendVerifyEmailResponse</abbr></a></dt>
                 <dd>SendVerifyEmailResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-MonetizationProductsEligibilityDataResponse.html"><abbr title="\InstagramAPI\Response\MonetizationProductsEligibilityDataResponse">MonetizationProductsEligibilityDataResponse</abbr></a></dt>
+                <dd>MonetizationProductsEligibilityDataResponse.</dd>
             
                     </dl>
     
