--- a/documentation/classes/InstagramAPI-Request-Timeline.html
+++ b/documentation/classes/InstagramAPI-Request-Timeline.html
@@ -477,7 +477,7 @@ for the album itself (its caption, location, etc).</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Timeline.php"><a href="../files/src-request-timeline.html"><abbr title="src/Request/Timeline.php">Timeline.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">222</span>
+        <span class="phpdocumentor-element-found-in__line">223</span>
     </aside>
         <p class="phpdocumentor-summary">Get your &quot;home screen&quot; timeline feed.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -526,7 +526,8 @@ installed for the first time;
 &quot;is_charging&quot; Wether the device is being charged
 or not. Valid values: 0 for not charging, 1 for
 charging.
-&quot;request_id&quot;. Request ID (UUIDv4). Used when paginating.</p></section></dd>
+&quot;request_id&quot;. Request ID (UUIDv4). Used when paginating.
+&quot;is_dark_mode&quot; if dark mode is enabled. 0 Disabled, 1 Enabled.</p></section></dd>
                     </dl>
     
             <h5 class="phpdocumentor-tag-list__heading">Tags</h5>
@@ -556,7 +557,7 @@ charging.
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Timeline.php"><a href="../files/src-request-timeline.html"><abbr title="src/Request/Timeline.php">Timeline.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">331</span>
+        <span class="phpdocumentor-element-found-in__line">338</span>
     </aside>
         <p class="phpdocumentor-summary">Get a user&#039;s timeline feed.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -627,7 +628,7 @@ it is set to false.</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Timeline.php"><a href="../files/src-request-timeline.html"><abbr title="src/Request/Timeline.php">Timeline.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">359</span>
+        <span class="phpdocumentor-element-found-in__line">366</span>
     </aside>
         <p class="phpdocumentor-summary">Get your own timeline feed.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -689,7 +690,7 @@ it is set to false.</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Timeline.php"><a href="../files/src-request-timeline.html"><abbr title="src/Request/Timeline.php">Timeline.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">373</span>
+        <span class="phpdocumentor-element-found-in__line">380</span>
     </aside>
         <p class="phpdocumentor-summary">Get your archived timeline media feed.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -728,7 +729,7 @@ it is set to false.</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Timeline.php"><a href="../files/src-request-timeline.html"><abbr title="src/Request/Timeline.php">Timeline.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">395</span>
+        <span class="phpdocumentor-element-found-in__line">402</span>
     </aside>
         <p class="phpdocumentor-summary">Archives or unarchives one of your timeline media items.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -799,7 +800,7 @@ Otherwise, if false, makes the media public to everyone again.</p></section></dd
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Timeline.php"><a href="../files/src-request-timeline.html"><abbr title="src/Request/Timeline.php">Timeline.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">421</span>
+        <span class="phpdocumentor-element-found-in__line">428</span>
     </aside>
         <p class="phpdocumentor-summary">Hides timeline feed posts from an unfollowed user.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -867,7 +868,7 @@ Otherwise, if false, makes the media public to everyone again.</p></section></dd
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Timeline.php"><a href="../files/src-request-timeline.html"><abbr title="src/Request/Timeline.php">Timeline.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">449</span>
+        <span class="phpdocumentor-element-found-in__line">456</span>
     </aside>
         <p class="phpdocumentor-summary">Backup all of your own uploaded photos and videos. :).</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
