--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1456,6 +1456,8 @@ because of too many requests. You must slow yourself down!</dd>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-Model-Clip.html"><abbr title="\InstagramAPI\Response\Model\Clip">Clip</abbr></a></dt>
                 <dd>Clip.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-MonetizationProductsEligibilityDataResponse.html"><abbr title="\InstagramAPI\Response\MonetizationProductsEligibilityDataResponse">MonetizationProductsEligibilityDataResponse</abbr></a></dt>
+                <dd>MonetizationProductsEligibilityDataResponse.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
